# the_prompt_wrangler

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  main.py  pyproject.toml  pytest.ini  ruff.toml
model/: dme_models.py  output_parser.py
service/: azure_open_ai.py  ollama.py  provider.py  provider_strategy.py
streamlit/: user_session.py
tests/: main_test.py
ui/: user_session.py
util/: llm_constants.py  log_util.py  ollama_available_models.py  usage_statistics.py
