[project]
name = "the-prompt-wrangler"
version = "0.1.0"
description = """`The Prompt Wrangler` application is a sophisticated tool designed to interface with the large 
language model different providers like azure openai and ollama, enabling medical data extraction tasks. 
This version includes enhanced documentation, comprehensive unit tests, and improved code structure for better
 maintainability and user experience."""
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "langchain>=0.3.25",
    "langchain-azure-ai>=0.1.3",
    "langchain-community>=0.3.24",
    "langchain-core>=0.3.63",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=0.3.18",
    "ollama>=0.5.1",
    "pydantic>=2.11.5",
    "pytest>=8.3.5",
    "python-json-logger>=3.3.0",
    "streamlit>=1.45.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.12",
]
